# wdws

./: .claude_balance_state.json  .gitignore  002_email_management.sql  003_attachment_support.sql  ATHENA_AI_EFFORT_LOG_2026-04-20.md  CHAT_API_ENHANCEMENTS.md  EMBEDDING_ARCHITECTURE.md  PORTS.md  PURVIEW_DECRYPT.md  QUALITY_SCORECARD.md  README.md  SESSION_NOTES_2026-04-23.md  SPACE_KNOWLEDGE_BASE.md  SPRINT_A_WORK_ORDER_v2.1.md  SPRINT_A_WORK_ORDER_v2.2.md  SPRINT_A_WORK_ORDER_v2.md  ace_case_situational_awareness_design.md  agent_loop.py  app.py  athena_logging.py  attachment_server.py  backfill_missing_chunk_embeddings.py  backfill_one_doc.py  backfill_unextracted_attachments.py  backup_postgres.sh  batch_decrypt_rpmsg.py  blob_storage.py  calendar_sync.py  cfr_ingest.py  chat_api.py  claude_balance_monitor.py  claude_sonnet_ocr_pilot.py  contextual_retrieval.py  core_safety.py  deadline_monitor.py  dedup_court_records.py  dropbox_integration_design.md  dropbox_watcher.py  email_agent.py  email_api.py  (+65 more)
ace-orchestrator/: .gitignore  README.md  alembic.ini  pyproject.toml
ace-orchestrator/alembic/: env.py
ace-orchestrator/scripts/: bootstrap_system_prompt.py  bootstrap_user_context.py  seed_default_config.py  smoke_test.py
ace-orchestrator/tests/: conftest.py  test_cache_strategist.py  test_config_resolver.py  test_encoder_parser_v2.py  test_memory_assembler.py  test_memory_encoder_parser.py  test_memory_retriever.py  test_multi_domain_selection.py  test_onboarding_overlay.py  test_principals_api.py  test_prompt_assembler.py  test_prompt_parser.py  (+7 more)
(+453 files in other folders)
